app/assets/stylesheets/home.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "imports";
// Promotion Section
div.promotion{
  background: $rojo;
  margin: 0px;
  p.bold{
    font-weight: 700;
    letter-spacing: 4px;
    font-size: 20px;
    color:#fff;
    margin: 0px;
  }
  .view-details{
    background-color: #fff;
    color: $rojo;
    &:hover, &:focus{
      background: #fff;
      color: $rojo;
    }
  }
  a.orange{
    color: #fff !important;
  }
}
#promotion-modal{
  top: 20% !important;
  color: #000;
  h4{
    font-weight: bold;
    color: $rojo
  }
}

header.home-bg{
  background-image: url('/assets/home-bg.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  height: 100vh;
  .bg-text{
    // margin-top: 30%;
    span{
      font-style: italic;
    }
    h1{
      font-weight: 900;
      color: #000;
      letter-spacing: 3px;
    }
  }
}


//Services section
#threeServices{
  .card{
    box-shadow: 0px 7px 25px -2px rgba(10, 16, 34, 0.2);
    @include transition(all, .4s);
    &:hover{
      box-shadow:0 40px 120px -10px rgba(10, 16, 34, 0.25);
      z-index: 100;
      transform: scale(1.1);
      @include transition(all, .4s);
    }
  }
  #waxOthers .card .service_title, #maniPedi .card .service_title{
    padding: 28px 0px 28px 0px;
    margin: 0px;
    color: #000;
  }
  #artificialNails .card .service_title{
    padding: 15px 10px 15px 10px;
    margin: 0px;
    color: #000;
  }
}


//contactUsNow section
#contactUsNow{
  background-image: url('/assets/appt-contact-us.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  margin: 0px;
  // height: 100vh;
  .contactUsNow-text{
    display: flex;
    align-items: center;
    padding-top: 5%;
    padding-bottom: 5%;
    h3{
      color: #fff;
      font-weight: 700;
      letter-spacing: 2px;
    }
    p{
      color: #fff;
    }
    a.btn{
      outline: 3px solid #fff;
      padding: 0em 1.5em !important;
      letter-spacing: 2px;
      background: none;
    }
  }
}

// Contact Page
header.contact-bg{
  background-image: url('/assets/contact-bg.jpg');
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  height: 50vh;
  .bg-text{
    color: #fff;
  }
}
button.verde{
  background: $rojo;
  color: #fff;
  letter-spacing: 2px;
}


///Media Queries
@media screen and (max-width: 800px){
  header.home-bg{
    background-image: url('/assets/mobile-home-bg.jpg');
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-position: center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    height: 100vh;
    .bg-text{
      background: rgba(#ffffff, 0.44);
      h1{
        font-weight: 900;
        font-size: 3.2rem;
        color: #000;
        letter-spacing: 3px;
      }
    }
  }
  #contactUsNow{
    background-attachment: scroll;
    .contactUsNow-text{
      display: block;
      padding-top: 5%;
      padding-bottom: 5%;
      h3{
        color: #fff;
        font-weight: 700;
        letter-spacing: 2px;
      }
      p{
        color: #fff;
      }
      a.btn{
        outline: 3px solid #fff;
        padding: 0em 1.5em !important;
        letter-spacing: 2px;
        background: none;
      }
    }
  }
}

